<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.RegisterActivity"
    android:weightSum="100"
    android:gravity="center"
    android:background="@drawable/registerbackground2"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="30"
        android:gravity="center"
        >


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_txt_playerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PlayerName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ChooseYourStarterPokemon"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <com.google.android.material.card.MaterialCardView
            android:layout_width="125dp"
            android:layout_height="150dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="10sp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/register_img_firstPokemon"
                    android:layout_width="125dp"
                    android:layout_height="130dp"
                    android:contentDescription="@string/PlayerPokemon"
                    android:paddingBottom="5dp"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/register_txt_firstPokemon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="125dp"
            android:layout_height="150dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="10sp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/register_img_secondPokemon"
                    android:layout_width="125dp"
                    android:layout_height="130dp"
                    android:contentDescription="@string/PlayerPokemon"
                    android:paddingBottom="5dp"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/register_txt_secondPokemon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="125dp"
            android:layout_height="150dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="10sp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/register_img_thirdPokemon"
                    android:layout_width="125dp"
                    android:layout_height="130dp"
                    android:contentDescription="@string/PlayerPokemon"
                    android:paddingBottom="5dp"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/register_txt_thirdPokemon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="30"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorSecondary"
            android:text="@string/Save"
            />
    </LinearLayout>

</LinearLayout>